--- a/app/client/modules/groupcard/groupcard.pug
+++ b/app/client/modules/groupcard/groupcard.pug
@@ -9,15 +9,15 @@ ul.card-menu
     p сповіщення увімкнені
     button(type="button") вимкнути сповіщення
   li
-    button(type="button") покинути групу
+    button(type="button" data-role="showLeaveGroup") покинути групу
   li
-    button(type="button") подивитися учасників
+    button(type="button" data-role="showGroupList") подивитися учасників
   li
     p з адмін. правами:
-    button(type="button") редагувати групу
+    button(type="button" data-role="showGroupChat") редагувати групу
   li
-    button(type="button") видалити групу
+    button(type="button" data-role="showDeleteGroup") видалити групу
   li
-    button(type="button") очистити історію
+    button(type="button" data-role="showClearHistory") очистити історію
 
 button(type="button").round-btn: i.ico &#x6a;
