--- a/app/client/modules/menu/menu.pug
+++ b/app/client/modules/menu/menu.pug
@@ -1,7 +1,7 @@
 ul.menu-list
   li.menu-list__item(data-target-group="aside" data-target="contactlist") Контакти
   li.menu-list__item(data-target-group="aside" data-target="chatlist") Список чатів
-  li.menu-list__item Новий груповий чат
-  li.menu-list__item Чорний список
+  li.menu-list__item(data-role="showGroupChat") Новий груповий чат
+  li.menu-list__item(data-role="showBlackList") Чорний список
   li.menu-list__item(data-target-group="aside" data-target="settings") Налаштування
-  li.menu-list__item Вийти з програми
+  li.menu-list__item(data-role="showLogout") Вийти з програми
