--- a/app/client/modules/settings/settings.pug
+++ b/app/client/modules/settings/settings.pug
@@ -1,7 +1,7 @@
 ul.menu-list
-  li.menu-list__item Змінити аватарку
-  li.menu-list__item Змінити ім'я
-  li.menu-list__item Змінити пароль
-  li.menu-list__item Кольорова тема
-  li.menu-list__item Мова
-  li.menu-list__item Видалити акаунт
+  li.menu-list__item(data-role="showChangeAva") Змінити аватарку
+  li.menu-list__item(data-role="showChangeName") Змінити ім'я
+  li.menu-list__item(data-role="showChangePass") Змінити пароль
+  li.menu-list__item(data-role="showChangeThema") Кольорова тема
+  li.menu-list__item(data-role="showChangeLang") Мова
+  li.menu-list__item(data-role="showDeleteAcc") Видалити акаунт
