--- a/app/client/modules/usercard/usercard.pug
+++ b/app/client/modules/usercard/usercard.pug
@@ -17,6 +17,6 @@ ul.card-menu
   li
     button(type="button") поділитися контактом
   li
-    button(type="button") очистити історію
+    button(type="button" data-role="showClearHistory") очистити історію
 
 button(type="button").round-btn: i.ico &#x6a;
