--- a/app/client/pug/app.pug
+++ b/app/client/pug/app.pug
@@ -14,7 +14,7 @@ html(lang='en').wjs-MobileHeightFix
 
       .left-side
         include ../modules/header/header.pug
-        include ../modules/subheader/subheader.pug
+        //- include ../modules/subheader/subheader.pug
         .lists-wrapper.wjs-scroll(data-scroll='right')
           .wjs-scroll__content-wrapper
             .wjs-scroll__content
@@ -37,9 +37,9 @@ html(lang='en').wjs-MobileHeightFix
                 include ../modules/chat-form/chat-form.pug
 
       .right-side
-        //- p.right-side__info Виберіть чат або контакт і почніть спілкування
+        p.right-side__info Виберіть чат або контакт і почніть спілкування
 
-        include ../modules/subheader/subheader.pug
+        //- include ../modules/subheader/subheader.pug
         //- .chat-wrapper.wjs-scroll(data-scroll='right')
         //-   .wjs-scroll__content-wrapper
         //-     .wjs-scroll__content
@@ -48,6 +48,6 @@ html(lang='en').wjs-MobileHeightFix
         //- include ../modules/chat-form/chat-form.pug
 
         //- include ../modules/usercard/usercard.pug
-        //- include ../modules/groupcard/groupcard.pug
+        //- include ../mdules/groupcard/groupcard.pug
 
     include ../modules/popups/popups.pug
